[package]
name = "bevy_animation_sequencer"
version = "0.1.0"
authors = ["Mike Hsu <mike.hsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "94c4184" }